// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue/Form > renders correctly - loading next step 1`] = `
<form
  class="perseid-form"
  id="test"
>
  <div
    active-step="start"
    id="default-layout"
    loader-component="[object Object]"
    state="[object Object]"
    use-subscription="() => {
      const state = {
        loading: process.env.LOADING === "true",
        steps: process.env.LOADING === "true" ? [] : [
          { path: "start", fields: [] },
          { path: "end", fields: [] }
        ]
      };
      return __vi_import_0__.ref(state);
    }"
  >
    
    
  </div>
</form>
`;

exports[`vue/Form > renders correctly - with active step 1`] = `
<form
  class="perseid-form"
  id="test"
>
  <div
    class="perseid-form__steps"
  >
    
    <!--
        Specifying the active step prevent browsers auto-fill system from changing fields
        located in other steps, resetting previous steps and breaking overall UX.
      -->
    
    <div
      class="perseid-form__step perseid-form__step--start"
      id="start"
    >
      <div
        class="perseid-form__step__fields"
        name="step"
      >
        <!--
      Key is composed of both step and field ids, in order to ensure each field is correctly reset
      when user changes his journey in previous steps.
    -->
        
        
      </div>
    </div>
    <div
      class="perseid-form__step perseid-form__step--end--active"
      id="end"
    >
      <div
        class="perseid-form__step__fields"
        name="step"
      >
        <!--
      Key is composed of both step and field ids, in order to ensure each field is correctly reset
      when user changes his journey in previous steps.
    -->
        
        
      </div>
    </div>
    
    
    <!--v-if-->
  </div>
</form>
`;

exports[`vue/Form > renders correctly - with active step 2`] = `
<form
  class="perseid-form"
  id="test"
>
  <div
    class="perseid-form__steps"
  >
    
    <!--
        Specifying the active step prevent browsers auto-fill system from changing fields
        located in other steps, resetting previous steps and breaking overall UX.
      -->
    
    <div
      class="perseid-form__step perseid-form__step--start--active"
      id="start"
    >
      <div
        class="perseid-form__step__fields"
        name="step"
      >
        <!--
      Key is composed of both step and field ids, in order to ensure each field is correctly reset
      when user changes his journey in previous steps.
    -->
        
        
      </div>
    </div>
    <div
      class="perseid-form__step perseid-form__step--end"
      id="end"
    >
      <div
        class="perseid-form__step__fields"
        name="step"
      >
        <!--
      Key is composed of both step and field ids, in order to ensure each field is correctly reset
      when user changes his journey in previous steps.
    -->
        
        
      </div>
    </div>
    
    
    <!--v-if-->
  </div>
</form>
`;
